# npy-ocaml

./: .gitignore  META  Makefile  README.md  _tags  dune-project  myocamlbuild.ml  npy.install  npy.opam  opam
src/: .merlin  jbuild  npy.ml  npy.mli  test.ml
tests/: .merlin  dune  jbuild  test.ml  test.npz
