opam-version: "1.2"
name:         "npy"
bug-reports:  "https://github.com/LaurentMazare/npy-ocaml/issues"
homepage:     "https://github.com/LaurentMazare/npy-ocaml"
dev-repo:     "git+https://github.com/LaurentMazare/npy-ocaml.git"
maintainer:   "Laurent Mazare <lmazare@gmail.com>"
authors:      [ "Laurent Mazare" ]

version: "dev"

build: [["jbuilder" "build" "--only-packages" "npy" "--root" "." "-j" jobs "@install"]]
install: []
remove:  []

depends: [
  "camlzip"
  "ocamlfind" {build}
  "jbuilder" {build}
]

depopts: [
]

conflicts: [
]

available: [ ocaml-version >= "4.03.0" ]
